[spring]refactor: refactor page and fix bug